tests/parser/errors/unterminated_string.err
error[P040]: unterminated string literal
  --> tests/parser/errors/unterminated_string.mochi:1:9

  1 | let s = "Hello
    |         ^

help:
  Close the string with a matching `"` before end of file.
